--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   ],
   "devDependencies": {
     "@ethersproject/abstract-provider": "^5.7.0",
+    "@ethersproject/asm": "^5.7.0",
     "@ethersproject/units": "^5.7.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.12",
     "@openzeppelin/contracts": "^4.7.3",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.1",
+    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.1.0",
     "@types/node": "^18.7.14",
     "chai": "^4.3.6",
