--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.1.0",
     "@types/node": "^18.7.14",
+    "base64-sol": "^1.1.0",
     "chai": "^4.3.6",
     "chai-ethers": "^0.0.1",
     "cross-env": "^7.0.2",
