--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,1 @@
-cache/
-artifacts/
-
-coverage*
-typechain/
-
-.vscode/*
-!.vscode/settings.json.default
-!.vscode/launch.json.default
-!.vscode/extensions.json.default
-
-node_modules/
-.env
-
-.yalc
-yalc.lock
-
-contractsInfo.json
-deployments/hardhat
-deployments/localhost
-
-/.dapp
-tmp/
-*.log
+node_modules
