--- a/contracts/package.json
+++ b/contracts/package.json
@@ -61,10 +61,11 @@
     "gas": "cross-env REPORT_GAS=true hardhat test",
     "coverage": "cross-env HARDHAT_DEPLOY_FIXTURE=true hardhat coverage",
     "dev:node": "cross-env MINING_INTERVAL=\"3000,5000\" hardhat node --hostname 0.0.0.0",
-    "dev": "cross-env MINING_INTERVAL=\"3000,5000\" hardhat node --hostname 0.0.0.0 --watch",
+    "hardhat:dev": "cross-env MINING_INTERVAL=\"3000,5000\" hardhat node --hostname 0.0.0.0 --watch --export ../web/src/lib/contracts.json",
     "geth": "node ./_scripts.js geth",
     "geth:stop": "node ./_scripts.js geth:stop",
     "geth:dev": "node ./_scripts.js geth:dev",
+    "dev": "node ./_scripts.js geth:watch",
     "local:dev": "hardhat --network localhost deploy --watch",
     "execute": "node ./_scripts.js run",
     "deploy": "node ./_scripts.js deploy",
