--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "algorithmic-music",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "scripts": {
+    "start": "pnpm run -r --stream dev"
+  }
 }
