--- a/contracts/package.json
+++ b/contracts/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@ethersproject/abstract-provider": "^5.7.0",
     "@ethersproject/asm": "^5.7.0",
+    "@ethersproject/constants": "^5.7.0",
     "@ethersproject/units": "^5.7.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.12",
     "@openzeppelin/contracts": "^4.7.3",
