--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"serve": "ipfs-emulator --only -d build -p 8080",
 		"lint": "prettier --check .",
 		"format": "prettier --write ."
 	},
@@ -16,7 +17,9 @@
 		"@ethersproject/contracts": "^5.7.0",
 		"@ethersproject/providers": "^5.7.1",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "1.0.0-next.43",
 		"@sveltejs/kit": "next",
+		"ipfs-gateway-emulator": "4.2.1-ipfs.2",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
