--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"serve": "ipfs-emulator --only -d build -p 8080",
+		"deploy": "dotenv -- ipfs-deploy -p pinata -s the-bleep-machine build",
 		"lint": "prettier --check .",
 		"format": "prettier --write ."
 	},
@@ -19,6 +20,8 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-static": "1.0.0-next.43",
 		"@sveltejs/kit": "next",
+		"dotenv-cli": "^6.0.0",
+		"ipfs-deploy": "^12.0.0",
 		"ipfs-gateway-emulator": "4.2.1-ipfs.2",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
