--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "algorithmic-music",
+  "name": "the-bleep-machine",
   "version": "1.0.0",
   "description": "The Bleep Machine",
   "repository": "github:wighawag/the-bleep-machine",
