use sepolia _ remove mint (for now)

--- a/docs/vite-manifest.json
+++ b/docs/vite-manifest.json
@@ -1,125 +1,125 @@
 {
-  "../node_modules/.pnpm/@sveltejs+kit@1.0.0-next.484_svelte@3.50.1+vite@3.1.2/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-6e1d4b4d.js",
-    "src": "../node_modules/.pnpm/@sveltejs+kit@1.0.0-next.484_svelte@3.50.1+vite@3.1.2/node_modules/@sveltejs/kit/src/runtime/client/start.js",
-    "isEntry": true,
-    "imports": [
-      "_index-42dc11eb.js",
-      "_singletons-693b2921.js",
-      "_paths-998b5be2.js"
-    ],
+  "../node_modules/.pnpm/@sveltejs+kit@1.0.0_svelte@3.59.2_vite@4.5.5_@types+node@18.19.70_sass@1.83.1_/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
       ".svelte-kit/generated/nodes/1.js",
       ".svelte-kit/generated/nodes/2.js",
       ".svelte-kit/generated/nodes/3.js"
-    ]
-  },
-  "../node_modules/.pnpm/@sveltejs+kit@1.0.0-next.484_svelte@3.50.1+vite@3.1.2/node_modules/@sveltejs/kit/src/runtime/components/layout.svelte": {
-    "file": "_app/immutable/components/layout.svelte-c1a640d2.js",
-    "src": "../node_modules/.pnpm/@sveltejs+kit@1.0.0-next.484_svelte@3.50.1+vite@3.1.2/node_modules/@sveltejs/kit/src/runtime/components/layout.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-42dc11eb.js"
-    ]
-  },
-  "../node_modules/.pnpm/@sveltejs+kit@1.0.0-next.484_svelte@3.50.1+vite@3.1.2/node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-aa328948.js",
-    "src": "../node_modules/.pnpm/@sveltejs+kit@1.0.0-next.484_svelte@3.50.1+vite@3.1.2/node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-42dc11eb.js",
-      "_singletons-693b2921.js"
-    ]
-  },
-  "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-86b5e509.js",
-    "src": "src/routes/+page.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-42dc11eb.js",
-      "_paths-998b5be2.js"
     ],
-    "css": [
-      "_app/immutable/assets/_page-0d4765f9.css"
+    "file": "_app/immutable/start-51f5ac89.js",
+    "imports": [
+      "_index-21ad14b5.js",
+      "_singletons-b1fde9fe.js",
+      "_paths-f0d2ad7e.js"
+    ],
+    "isEntry": true,
+    "src": "../node_modules/.pnpm/@sveltejs+kit@1.0.0_svelte@3.59.2_vite@4.5.5_@types+node@18.19.70_sass@1.83.1_/node_modules/@sveltejs/kit/src/runtime/client/start.js"
+  },
+  "../node_modules/.pnpm/@sveltejs+kit@1.0.0_svelte@3.59.2_vite@4.5.5_@types+node@18.19.70_sass@1.83.1_/node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "_app/immutable/components/error.svelte-1131366e.js",
+    "imports": [
+      "_index-21ad14b5.js",
+      "_singletons-b1fde9fe.js"
+    ],
+    "isEntry": true,
+    "src": "../node_modules/.pnpm/@sveltejs+kit@1.0.0_svelte@3.59.2_vite@4.5.5_@types+node@18.19.70_sass@1.83.1_/node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+  },
+  "../node_modules/.pnpm/@sveltejs+kit@1.0.0_svelte@3.59.2_vite@4.5.5_@types+node@18.19.70_sass@1.83.1_/node_modules/@sveltejs/kit/src/runtime/components/layout.svelte": {
+    "file": "_app/immutable/components/layout.svelte-af77fcf5.js",
+    "imports": [
+      "_index-21ad14b5.js"
+    ],
+    "isEntry": true,
+    "src": "../node_modules/.pnpm/@sveltejs+kit@1.0.0_svelte@3.59.2_vite@4.5.5_@types+node@18.19.70_sass@1.83.1_/node_modules/@sveltejs/kit/src/runtime/components/layout.svelte"
+  },
+  ".svelte-kit/generated/nodes/0.js": {
+    "file": "_app/immutable/chunks/0-a99e3ba9.js",
+    "imports": [
+      "__layout-da46b06b.js",
+      "../node_modules/.pnpm/@sveltejs+kit@1.0.0_svelte@3.59.2_vite@4.5.5_@types+node@18.19.70_sass@1.83.1_/node_modules/@sveltejs/kit/src/runtime/components/layout.svelte"
+    ],
+    "isDynamicEntry": true,
+    "src": ".svelte-kit/generated/nodes/0.js"
+  },
+  ".svelte-kit/generated/nodes/1.js": {
+    "file": "_app/immutable/chunks/1-31ab3e37.js",
+    "imports": [
+      "../node_modules/.pnpm/@sveltejs+kit@1.0.0_svelte@3.59.2_vite@4.5.5_@types+node@18.19.70_sass@1.83.1_/node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+    ],
+    "isDynamicEntry": true,
+    "src": ".svelte-kit/generated/nodes/1.js"
+  },
+  ".svelte-kit/generated/nodes/2.js": {
+    "file": "_app/immutable/chunks/2-4997942b.js",
+    "imports": [
+      "src/routes/+page.svelte"
+    ],
+    "isDynamicEntry": true,
+    "src": ".svelte-kit/generated/nodes/2.js"
+  },
+  ".svelte-kit/generated/nodes/3.js": {
+    "file": "_app/immutable/chunks/3-9737349d.js",
+    "imports": [
+      "src/routes/about/+page.svelte"
+    ],
+    "isDynamicEntry": true,
+    "src": ".svelte-kit/generated/nodes/3.js"
+  },
+  "__layout-da46b06b.js": {
+    "file": "_app/immutable/chunks/_layout-da46b06b.js"
+  },
+  "_index-21ad14b5.js": {
+    "file": "_app/immutable/chunks/index-21ad14b5.js"
+  },
+  "_paths-f0d2ad7e.js": {
+    "file": "_app/immutable/chunks/paths-f0d2ad7e.js",
+    "imports": [
+      "_index-21ad14b5.js"
     ]
   },
-  "src/routes/about/+page.svelte": {
-    "file": "_app/immutable/components/pages/about/_page.svelte-8f7e2d28.js",
-    "src": "src/routes/about/+page.svelte",
-    "isEntry": true,
+  "_singletons-b1fde9fe.js": {
+    "file": "_app/immutable/chunks/singletons-b1fde9fe.js",
     "imports": [
-      "_index-42dc11eb.js"
-    ],
-    "css": [
-      "_app/immutable/assets/_page-5f937fa9.css"
+      "_paths-f0d2ad7e.js"
     ]
   },
   "src/routes/+layout.ts": {
-    "file": "_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js",
-    "src": "src/routes/+layout.ts",
+    "file": "_app/immutable/modules/pages/_layout.ts-9cbb603b.js",
+    "imports": [
+      "__layout-da46b06b.js"
+    ],
     "isEntry": true,
+    "src": "src/routes/+layout.ts"
+  },
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-0d4765f9.css",
+    "src": "src/routes/+page.css"
+  },
+  "src/routes/+page.svelte": {
+    "css": [
+      "_app/immutable/assets/_page-0d4765f9.css"
+    ],
+    "file": "_app/immutable/components/pages/_page.svelte-1fdd17bc.js",
     "imports": [
-      "__layout-1daba58d.js"
-    ]
-  },
-  "_singletons-693b2921.js": {
-    "file": "_app/immutable/chunks/singletons-693b2921.js",
-    "imports": [
-      "_paths-998b5be2.js"
-    ]
-  },
-  "_paths-998b5be2.js": {
-    "file": "_app/immutable/chunks/paths-998b5be2.js",
-    "imports": [
-      "_index-42dc11eb.js"
-    ]
-  },
-  "_index-42dc11eb.js": {
-    "file": "_app/immutable/chunks/index-42dc11eb.js"
-  },
-  "__layout-1daba58d.js": {
-    "file": "_app/immutable/chunks/_layout-1daba58d.js"
-  },
-  ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-df51f1ea.js",
-    "src": ".svelte-kit/generated/nodes/0.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__layout-1daba58d.js",
-      "../node_modules/.pnpm/@sveltejs+kit@1.0.0-next.484_svelte@3.50.1+vite@3.1.2/node_modules/@sveltejs/kit/src/runtime/components/layout.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-fa659617.js",
-    "src": ".svelte-kit/generated/nodes/1.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "../node_modules/.pnpm/@sveltejs+kit@1.0.0-next.484_svelte@3.50.1+vite@3.1.2/node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-268aa67a.js",
-    "src": ".svelte-kit/generated/nodes/2.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/+page.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-d8e88542.js",
-    "src": ".svelte-kit/generated/nodes/3.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/about/+page.svelte"
-    ]
+      "_index-21ad14b5.js",
+      "_paths-f0d2ad7e.js"
+    ],
+    "isEntry": true,
+    "src": "src/routes/+page.svelte"
   },
   "src/routes/about/+page.css": {
     "file": "_app/immutable/assets/_page-5f937fa9.css",
     "src": "src/routes/about/+page.css"
   },
-  "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-0d4765f9.css",
-    "src": "src/routes/+page.css"
+  "src/routes/about/+page.svelte": {
+    "css": [
+      "_app/immutable/assets/_page-5f937fa9.css"
+    ],
+    "file": "_app/immutable/components/pages/about/_page.svelte-6719a01e.js",
+    "imports": [
+      "_index-21ad14b5.js"
+    ],
+    "isEntry": true,
+    "src": "src/routes/about/+page.svelte"
   }
 }
