--- a/web/package.json
+++ b/web/package.json
@@ -17,9 +17,9 @@
 		"@ethersproject/abstract-provider": "^5.7.0",
 		"@ethersproject/contracts": "^5.7.0",
 		"@ethersproject/providers": "^5.7.1",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-static": "1.0.0-next.43",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-auto": "1.0.0",
+		"@sveltejs/adapter-static": "1.0.0",
+		"@sveltejs/kit": "1.0.0",
 		"dotenv-cli": "^6.0.0",
 		"ipfs-deploy": "^12.0.0",
 		"ipfs-gateway-emulator": "4.2.1-ipfs.2",
@@ -30,7 +30,7 @@
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^4.5.5"
 	},
 	"type": "module",
 	"dependencies": {
